--- a/accueil.html
+++ b/accueil.html
@@ -8,6 +8,33 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <div id="logo-nav">
+            <div id="logo">
+                <a href="#"><img src="/logo.png" alt="logo sport.com"></a>
+                <p>Lorem ipsum dolor <span>sit amet</span></p>
+            </div>
+            <nav>
+                <div id="compte-panier">
+                    <div class="compte-panier2">
+                        <a href="#"><img src="/icon-mon-compte.png" alt=""></a>
+                        <p>Mon compte</p>
+                    </div>
+                    <div class="compte-panier2">
+                        <a href="#"><img src="/icon-mon-panier.png" alt=""></a>
+                        <p>Votre panier est vide</p>
+                    </div>
+                </div>
+                <p id="bonjour">Bonjour Julien</p>
+                <div id="contact">
+                    <a class="contact2" href="#">Contactez-nous</a>
+                    <a class="contact2" href="#">Parrainage</a>
+                    <a class="contact2" href="#">Déconnexion</a>
+                </div>
+            </nav>
+        </div>
+
+    </header>
     
 </body>
 </html>
