--- a/accueil.html
+++ b/accueil.html
@@ -17,11 +17,11 @@
             <nav>
                 <div id="compte-panier">
                     <div class="compte-panier2">
-                        <a href="#"><img src="/icon-mon-compte.png" alt=""></a>
+                        <a href="#"><img src="/icon-mon-compte.png" alt="Mon compte"></a>
                         <p>Mon compte</p>
                     </div>
                     <div class="compte-panier2">
-                        <a href="#"><img src="/icon-mon-panier.png" alt=""></a>
+                        <a href="#"><img src="/icon-mon-panier.png" alt="Mon panier"></a>
                         <p>Votre panier est vide</p>
                     </div>
                 </div>
@@ -33,8 +33,22 @@
                 </div>
             </nav>
         </div>
-
     </header>
+    <main>
+        <img src="/header-page-catalogue.png" alt="image catalogue">
+        <div class="gant-boxe">
+            <img src="/gant-boxe-1.png" alt="">
+        </div>
+        <div class="gant-boxe">
+            <img src="/gant-boxe-2.png" alt="">
+        </div>
+        <div class="gant-boxe">
+            <img src="/gant-boxe-1.png" alt="">
+        </div>
+        <div class="gant-boxe">
+            <img src="/gant-boxe-2.png" alt="">
+        </div>
+    </main>
     
 </body>
 </html>
