--- a/accueil.html
+++ b/accueil.html
@@ -35,20 +35,84 @@
         </div>
     </header>
     <main>
-        <img src="/header-page-catalogue.png" alt="image catalogue">
-        <div class="gant-boxe">
-            <img src="/gant-boxe-1.png" alt="">
-        </div>
-        <div class="gant-boxe">
-            <img src="/gant-boxe-2.png" alt="">
-        </div>
-        <div class="gant-boxe">
-            <img src="/gant-boxe-1.png" alt="">
-        </div>
-        <div class="gant-boxe">
-            <img src="/gant-boxe-2.png" alt="">
+        <div id="container">
+            <div id="image-header">
+                <img src="/header-page-catalogue.png" alt="image catalogue">
+            </div>
+            <div id="sous-container">
+                <div class="gant-boxe">
+                    <div class="produit">
+                        <img src="/gant-boxe-2.png" alt="">
+                        <p>NTS DE BOXE COMBAT KLIMAX V3</p>
+                    </div>
+                        <div class="sous-image">
+                        <button type="submit">Voir la vente</button>
+                        <p class="line">120€</p>
+                        <p class="prix">65€</p>
+                    </div>
+                </div>
+                <div class="gant-boxe">
+                    <div class="produit">
+                        <img src="/gant-boxe-1.png" alt="">
+                        <p>NTS DE BOXE COMBAT KLIMAX V3</p>
+                    </div>
+                        <div class="sous-image">
+                        <button type="submit">Voir la vente</button>
+                        <p class="line">120€</p>
+                        <p class="prix">65€</p>
+                    </div>
+                </div>
+                <div class="gant-boxe">
+                    <div class="produit">
+                        <img src="/gant-boxe-2.png" alt="">
+                        <p>NTS DE BOXE COMBAT KLIMAX V3</p>
+                    </div>
+                        <div class="sous-image">
+                        <button type="submit">Voir la vente</button>
+                        <p class="line">120€</p>
+                        <p class="prix">65€</p>
+                    </div>
+                </div>
+                <div class="gant-boxe">
+                    <div class="produit">
+                        <img src="/gant-boxe-1.png" alt="">
+                        <p>NTS DE BOXE COMBAT KLIMAX V3</p>
+                    </div>
+                        <div class="sous-image">
+                        <button type="submit">Voir la vente</button>
+                        <p class="line">120€</p>
+                        <p class="prix">65€</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
+    <footer>
+        <div>
+            <a href="#">Qui sommes-nous ?</a>
+            <a href="#">Contact</a>
+            <a href="#">Assistance</a>
+            <a href="#">CGV</a>
+        </div>
+        <div>
+            <div>
+                <img src="/icon-livre.png" alt="">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dicta ipsum quas eius nesciunt ipsam aperiam!</p>
+            </div>
+            <div>
+                <img src="/icon-camion.png" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo deleniti sapiente, sit ab alias ducimus autem.</p>
+            </div>
+            <div>
+                <img src="/icon-cadenat.png" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ipsam assumenda nemo itaque sint labore aspernatur.</p>
+            </div>
+            <div>
+                <img src="/icon-pouce.png" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga suscipit, eaque minus tenetur ut consequatur reprehenderit?</p>
+            </div>
+        </div>
+    </footer>
     
 </body>
 </html>
