--- a/accueil.html
+++ b/accueil.html
@@ -88,30 +88,36 @@
         </div>
     </main>
     <footer>
-        <div>
+        <div id="head-footer">
             <a href="#">Qui sommes-nous ?</a>
             <a href="#">Contact</a>
             <a href="#">Assistance</a>
             <a href="#">CGV</a>
         </div>
-        <div>
-            <div>
+        <div id="icones">
+            <div class="icones-footer">
                 <img src="/icon-livre.png" alt="">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia dicta ipsum quas eius nesciunt ipsam aperiam!</p>
             </div>
-            <div>
+            <div class="icones-footer">
                 <img src="/icon-camion.png" alt="">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo deleniti sapiente, sit ab alias ducimus autem.</p>
             </div>
-            <div>
+            <div class="icones-footer">
                 <img src="/icon-cadenat.png" alt="">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ipsam assumenda nemo itaque sint labore aspernatur.</p>
             </div>
-            <div>
+            <div class="icones-footer">
                 <img src="/icon-pouce.png" alt="">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga suscipit, eaque minus tenetur ut consequatur reprehenderit?</p>
             </div>
         </div>
+        <div id="social">
+            <div><a href="#"><img src="/icon-facebook.png" alt=""></a></div>
+            <div><a href="#"></a><img src="/icon-twitter.png" alt=""></a></div>
+            <div><a href="#"></a><img src="/icon-linkedin.png" alt=""></a></div>         
+        </div>
+        <p>© 2013 sport privilege. Tous droits réservés.</p>
     </footer>
     
 </body>
